--- a/src/index.css
+++ b/src/index.css
@@ -84,11 +84,48 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
+
+.new-todo-form {
+	display: flex;
+	margin-bottom: 0;
+}
+
 .new-todo,
+.new-todo-form .new-todo-form__timer,
 .edit {
 	position: relative;
 	margin: 0;
 	width: 100%;
+	font-size: 24px;
+	font-family: inherit;
+	font-weight: inherit;
+	line-height: 1.4em;
+	color: inherit;
+	padding: 6px;
+	border: 1px solid #999;
+	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.new-todo, .new-todo-form .new-todo-form__timer {
+	padding: 16px 16px 16px 60px;
+	border: none;
+	background: rgba(0, 0, 0, 0.003);
+	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+}
+
+.new-todo-form .new-todo-form__timer {
+	width: 15%;
+	padding-left: 16px;
+}
+
+.new-todo,
+.edit {
+	position: relative;
+	margin: 0;
+	width: 70%;
 	font-size: 24px;
 	font-family: inherit;
 	font-weight: inherit;
@@ -220,13 +257,16 @@ body {
 }
 
 .todo-list li label .created {
+	width: 150px;
 	font-size: 13px;
 	color: gray;
+	text-align: right;
 }
 
 .todo-list li label .description {
 	word-break: break-all;
-	display: block;
+	width: 160px;
+	display: inline-block;
 	line-height: 1.2;
 	transition: color 0.4s;
 	font-weight: 400;
@@ -249,6 +289,46 @@ body {
 	margin: auto 0 11px;
 	transition: color 0.2s ease-out;
 	cursor: pointer;
+}
+.todo-list li .icon-timer {
+	/* position: absolute; */
+	align-self: center;
+	width: 30px;
+	height: 40px;
+	color: #cc9a9a;
+	/* margin: auto 0 11px; */
+	transition: color 0.2s ease-out;
+	cursor: pointer;
+}
+
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+	font-size: 18px;
+	width: 18px;
+	height: 18px;
+	margin-bottom: 8px;
+}
+
+.todo-list li label .timer-buttons {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-right: 20px;
+	font-size: 13px;
+	color: gray;
+}
+
+.time{
+	display: inline-block;
+	margin-left: 10px;
+}
+
+.icon-pause:after {
+	content: '⏸';
+}
+
+.icon-play:after {
+	content: '▶';
 }
 
 .todo-list li .icon:hover {
